--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.12.3",
     "jwt-decode": "^3.1.2",
     "node-sass": "^5.0.0",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-drag-sortable": "^1.0.6",
