--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@tinymce/tinymce-react": "^3.10.2",
     "antd": "^4.12.3",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
